--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,16 @@
-/* Global(s,) Variables and Imports */
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;700&display=swap');
-
+/* Global(s,) Variables */
 :root {
 	--top-padding: 10vh;
-	--background-image-dimm: .2;
 	--text-color: #333;
 	--content-margin: 5%;
 	--max-content-width: 800px;
-	--sidebar-width: min(400px, 28vw);
+	--background-image-dimm: .3;
+	--sidebar-width: 34vw;
+	--sidebar-max-width: 300px;
 	--sidebar-content-width: 85%;
 	--sidebar-text-color: white;
 	font-family: 'Rubik', sans-serif;
+	font-weight: 300;
 	color: var(--text-color);
 }
 h1, h2, h3, h4 {
@@ -28,33 +27,37 @@ img {
 body {
 	margin: 0;
 	padding: 0;
-
-	position: relative;
 }
 #wrapper {
-	margin-left: var(--sidebar-width);
+	display: flex;
 	min-height: 100vh;
-
 }
 
 main, #sidebar {
 	padding-top: var(--top-padding);
 }
 
-@media only screen and (max-width: 840px) {
+main {
+	margin: 0 var(--content-margin);
+}
+
+@media only screen and (max-width: 950px) {
 	:root {
 		font-size: .9rem;
 		--content-margin: 2%;
 	}
 	#wrapper {
 		margin-left: 0;
-		min-height: auto;
+		margin-top: 7rem;
+		min-height: none;
+		display: block;
 	}
-	main, #sidebar {
+	#sidebar {
 		padding-top: 1rem;
 	}
 	main {
 		padding: 3rem 0;
+		margin: 0;
 	}
 }
 /* End General Layout Setup */
@@ -62,12 +65,12 @@ main, #sidebar {
 
 /* Sidebar Styling */
 #sidebar {
-	position: fixed;
-	left: 0;
+	position: sticky;
 	top: 0;
 	height: 100vh;
 
 	width: var(--sidebar-width);
+	max-width: var(--sidebar-max-width);
 
 	display: flex;
 	flex-direction: column;
@@ -77,7 +80,7 @@ main, #sidebar {
 
 	user-select: none;
 
-	background: linear-gradient(rgba(0, 0, 0, var(--background-image-dimm)), rgba(0, 0, 0, var(--background-image-dimm))), url('/assets/bg.jpeg');
+	background: linear-gradient(rgba(0, 0, 0, var(--background-image-dimm)), rgba(0, 0, 0, var(--background-image-dimm))), url('https://www.publicdomainpictures.net/pictures/310000/velka/tempelhof-airport-berlin.jpg');
 	background-size: cover;
 	background-position: -50% top;
 }
@@ -155,13 +158,14 @@ main, #sidebar {
 }
 /* End Sidebar Styling > Nav Entry Styling */
 
-@media only screen and (max-width: 840px) {
+@media only screen and (max-width: 950px) {
 	#sidebar {
 		width: auto;
 		height: auto;
-		position: sticky;
-	}
-	#sidebar {
+		position: fixed;
+		top: 0;
+		width: 100%;
+		max-width: none;
 		padding: .8rem 0;
 	}
 	#sidebar > header > * {
@@ -194,10 +198,11 @@ main, #sidebar {
 /* Main Content Container Styling */
 #content-wrapper {
 	max-width: var(--max-content-width);
-	margin: 0 var(--content-margin);
+	margin: 0 auto;
+	margin-bottom: 2rem;
 }
 
-@media only screen and (max-width: 840px) {
+@media only screen and (max-width: 950px) {
 	#content-wrapper {
 		padding: 0 1.5rem;
 	}
@@ -219,7 +224,10 @@ main, #sidebar {
 }
 #content-wrapper img {
 	width: 100%;
-	border: 1px dashed #ddd;
+}
+.caption {
+	font-size: .9em;
+	margin-bottom: 2rem;
 }
 .flex-row {
 	display: flex;
@@ -246,7 +254,7 @@ main, #sidebar {
 
 
 @media only screen and (max-width: 500px) {
-	.flex-row > :not(:last-child) {
+	.flex-row > * {
 		margin-right: 0;
 	}
 	.flex-row {
@@ -264,6 +272,7 @@ footer {
 	text-align: right;
 	color: var(--sidebar-text-color);
 	width: var(--sidebar-width);
+	max-width: var(--sidebar-max-width);
 	opacity: .8;
 }
 footer > div {
@@ -271,8 +280,9 @@ footer > div {
 	margin: 0 auto;
 }
 
-@media only screen and (max-width: 840px) {
+@media only screen and (max-width: 950px) {
 	footer {
+		max-width: none;
 		position: static;
 		width: auto;
 		margin: 0 auto;
