Removed unneeded CSS and flex-rows, very minor value tweaks

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,6 @@ main {
 	#wrapper {
 		margin-left: 0;
 		margin-top: 7rem;
-		min-height: none;
 		display: block;
 	}
 	#sidebar {
@@ -74,9 +73,6 @@ main {
 
 	width: var(--sidebar-width);
 
-	display: flex;
-	flex-direction: column;
-
 	padding-right: .6rem;
 	padding-left: .6rem;
 
@@ -84,7 +80,7 @@ main {
 
 	background: linear-gradient(rgba(0, 0, 0, var(--background-image-dimm)), rgba(0, 0, 0, var(--background-image-dimm))), url('https://www.publicdomainpictures.net/pictures/310000/velka/tempelhof-airport-berlin.jpg');
 	background-size: cover;
-	background-position: -50% top;
+	background-position: -110% top;
 }
 #sidebar::before {
 	display: block;
@@ -113,10 +109,10 @@ main {
 	margin-left: calc(1.5rem + 5%);
 	opacity: .7;
 }
-#sidebar > header > h2 {
+#sidebar h2 {
 	font-size: 1.7rem;
 }
-#sidebar > nav > ul {
+#sidebar ul {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
@@ -152,7 +148,7 @@ main {
 	background-color: var(--sidebar-text-color);
 	height: 1px;
 	width: 0px;
-	transition: .2s;
+	transition: width .2s;
 	margin-left: auto;
 }
 .nav-entry:hover::after, .nav-entry.active::after {
@@ -162,7 +158,6 @@ main {
 
 @media only screen and (max-width: 850px) {
 	#sidebar {
-		width: auto;
 		height: auto;
 		width: 100%;
 		max-width: none;
@@ -219,7 +214,7 @@ main {
 	margin-top: .3rem;
 }
 #content-wrapper > section {
-	line-height: 1.5;
+	line-height: 1.7;
 	font-size: 1.2em;
 }
 #content-wrapper img {
